calculate schedule algo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Fair Scheduler</title>
+        <title>Year Schedule Planner</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <link rel="stylesheet" href="./index.css">
     </head>
@@ -180,9 +180,7 @@
             <button class="btn btn-dark" onclick='saveData()'>Save</button>
         </div>
         <br/>
-        <br/>
-        <br/>
-        <div class="container-lg">
+        <div class='container-lg shadow p-3 mb-5 rounded mt-3 border border-dark'>
             <h2>Output Table</h2>
             <table class="table table-dark table-striped">
                 <thead>
