min per shift optionable

--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
             </table>
             <button class="btn btn-dark" onclick='addEmployee()'>Add Employee</button>
             <button class="btn btn-dark" onclick='saveData()'>Save</button>
+            <span>Set Minimum number of employees per shift</span>
+            <input type="number" class="rounded" placeholder='2'  aria-label="Input Number" aria-describedby="inputGroup-sizing-sm" id='numInput'>
         </div>
         <br/>
         <div class='container-lg shadow p-3 mb-5 rounded mt-3 border border-dark'>
